--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "mainOutput": "main",
   "dependencies": {
     "famous": "^0.3.0",
-    "react": "~0.11.2",
-    "react-router": "^0.7.0"
+    "react": "^0.12.0",
+    "react-router": "^0.11.6"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
