--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "mainOutput": "main",
   "dependencies": {
     "famous": "^0.3.0",
+    "newforms": "^0.10.1",
     "react": "^0.12.0",
     "react-router": "^0.11.6"
   },
